add get me as doctor
